<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Novena</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnPrayers">Prayers</string>
    <string name="btnHymns">Hymns</string>
    <string name="btnConsecration">Act of Consecration</string>
    
    <string name="amen">Amém</string>
    <string name="aveMaria">Ave Maria</string>
    
    <string name="txtFirstPrayer">O Mother of Perpetual Help , here at your feet a poor sinner that appeals to you and put their trust in you . Mother of mercy , have mercy on me. I know you all call the refuge and my hope. Succor me the love of Jesus Christ . Give a hand to a poor sinner that Vos is devoted to delivery and always at your service . Praise and thank God , for his mercy , inspired me great confidence in you , I see this confidence the pledge of my eternal salvation . I confess I have often fallen into sin by failing to appeal to you but with your help I will always be victorious. I know you will help me to recommend to you , but I fear in dangerous situations not invoke Thee and thus cause the loss of my soul . I beg earnestly concedeis me grace when I try demon , to have recourse to Thee , repeating : Ò Mary, succor me ! O Mother of Perpetual Help , do not let me lose my God.</string>
    <string name="txtSecondPrayer">O Mother of Perpetual Help, grant me the grace to always invoke thy most powerful name, since it is our help during life and salvation at death. Ò Mary, sweetest and most pure Virgin, that thy name henceforth be the aspiration of my soul. My sovereign, do not delay in help me, when I invoke Thee, because in all the temptations that assail me in all my needs, never fail to invoke Thee, ever repeating: O Mary! O Mary! What strength, what tenderness, what sweetness, what confidence feels my soul when I pronounce thy blessed name, when I think of you, thank the Lord, for Thee to have given this name so sweet, so kind, so holy, so mighty for my as well. But do not be content to pronounce it me with love that love that I dedicate remember Thee without ceasing, that I invoke Thee, O Mother of Perpetual Help.</string>
    <string name="txtThirdPrayer">O Mother of Perpetual Help, are the dispenses all graces which God gives to sinners unhappy, and Vos made ​​so powerful, so rich and so good, was to assist us in all our miseries. You are the advocate of sinners, that ye most abandoned resort; succor me since I give myself to Thee. I recommend you my eternal salvation. Put me on the number of your most devoted servants, take up me under your protection, this is enough for me. If socorrerdes me, nothing the demons fear, because you are more powerful than all hell, not even fear my judge, Jesus Christ, because one just to appease your request. I fear only leave negligently recommend myself to you and causing destruction of my soul. My sovereign, obtain for me the forgiveness of sins, the love of Jesus Christ, the final perseverance and the grace to always turn to you, O Mother of Perpetual Help.</string>
    <string name="txtFourthPrayer">Virgin Immaculate , my Mother Mary to You who are the Mother of my Lord , the Queen of the world , the Advocate , the hope , the refuge of sinners , I turn today I who am the most miserable of all. I prostrate at your feet , O great Queen, and I thank Thee for all the benefits that until now you have done me, especially by me ye have freed from hell for me so often deserved . I love you , Lady lovable , and love that I have , I promise to serve you as always and can do so for all may be served . In you, after Jesus put all my hopes , all my salvation . Accept me for thy servant , and welcome it me under your mantle , O Mother of Mercy . And since you are so powerful with God , deliver me from all temptations , or impetrai me strength to overcome them until death . To you beg the true love of Jesus Christ ; Thee I hope to achieve a good death . My mother , the love which ye have of God , I pray Thee that I always help her , especially at the last moment of my life . Not desampareis me as ye see me have saved in Heaven , abendizer Thee and sing your mercies for all eternity . I hope so , so be it .</string>
    
    <string name="txtTitleActOfConsecration">Consecration</string>
    <string name="txtTitleFirstPrayer">First Prayer</string>
    <string name="txtTitleSecondPrayer">Second Prayer</string>
    <string name="txtTitleThrirthPrayer">Thrirth Prayer</string>
    <string name="txtTitleFourthPrayer">Fourth Prayer</string>
   
    <string name="txtActOfConsecration">Willing to devote myself entirely to the service of * Virgin Mary, * who, after God, * I hope all the help in life and in death, * I join the members of this Confraternity sink, * founded in honor of our Mother of Perpetual Help * as my special patron, * choose the glorious St. Alphonsus, * in order to get * me * a sincere and lasting devotion to the Blessed Virgin * which is honored by such a tender name. * Also renew promise * * my consecration to the Mother of God and St. Alphonsus, * every first Tuesday of the month, * and frequently receive the sacraments, * O Mother of Perpetual Help, * receive me for thy servant, and make me the object of your maternal protection. * I promise you recourse to thee * in all my spiritual and temporal needs, * My Patron Saint, St. Albans, * Obtain for me the grace of an ardent love for Jesus Christ, * and always invoke the Mother of Perpetual Help.</string>
    
    
</resources>
