<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NovenaActivity" >

    <Button
        android:id="@+id/btnPrayers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnPrayers" />

    <Button
        android:id="@+id/btnHymns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHymns" />

    <Button
        android:id="@+id/btnConsagration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsecration" />

</LinearLayout>