<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:fillViewport="true"
    android:padding="0px" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtTitleFirstPrayer"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtFirstPrayer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/aveMaria"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtTitleSecondPrayer"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtSecondPrayer"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/aveMaria"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtTitleThirdPrayer"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtThirdPrayer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/aveMaria"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtTitleFourthPrayer"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="false"
            android:longClickable="false"
            android:text="@string/txtFourthPrayer"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</ScrollView>